<resources>
    <string name="app_name">DRAG</string>
    <string name="roundNumber">Number of Rounds</string>
    <string name="playerNumber">Number of Players</string>
    <string name="start">Start</string>
    <string name="guessHint">Your guess…</string>
    <string name="submitButton">Submit</string>
    <string name="definingHint">Choose a word…</string>
    <string name="guessEmpty">You must type a word!</string>
    <string name="roundEnding">End of Round %1$d of %2$d</string>
    <string name="finishGame">Finish</string>
    <string name="finishRound">Finish Round</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="offlineMode">Play offline</string>
    <string name="onlineMode">Play online</string>
    <string name="createGame">Create game</string>
    <string name="joinGame">Join game</string>
    <string name="errorWordnik">Failed to get words!</string>
    <string name="errorGetLobbies">Failed to get lobbies!</string>
    <string name="errorCreateLobby">Failed to create lobby!</string>
    <string name="lobbyInfo">[Players: %1$d/%2$d] [Rounds: %3$d]</string>
    <string name="lobbyPlayerNameHint">Insert your name…</string>
    <string name="errorNoPlayerName">Please insert your name!</string>
    <string name="lobbyNameHint">Insert the lobby name…</string>
    <string name="errorNoLobbyName">Please insert the lobby name!</string>
    <string name="lobbyWaiting">Waiting for players…</string>
    <string name="lobbyList">Lobby List</string>
    <string name="error">Error!</string>
    <string name="errorJoinLobby">Failed to join lobby! Please try again.</string>
    <string name="startingGame">Starting…</string>
    <string name="resultsWaiting">Gathering results…</string>
    <string name="localPlayer">Local Player</string>
    <string name="errorGetResults">Error while gathering results!</string>
</resources>