<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DragResultsActivity">

    <TextView
        android:id="@+id/roundEndText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/roundEnding"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/drawing"
        app:layout_constraintStart_toStartOf="@+id/drawing"
        app:layout_constraintTop_toTopOf="parent" />

    <edu.isel.pdm.li51xd.g08.drag.view.DrawingView
        android:id="@+id/drawing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:background="@color/colorCanvas"
        app:layout_constraintBottom_toTopOf="@+id/indexBar"
        app:layout_constraintDimensionRatio="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundEndText" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="@+id/finishButton"
        app:layout_constraintStart_toStartOf="@+id/drawing" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/finishButton"
        app:layout_constraintStart_toEndOf="@+id/previousButton" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/finishGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/drawing" />

    <TextView
        android:id="@+id/guessText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/drawing"
        app:layout_constraintEnd_toEndOf="@+id/drawing"
        app:layout_constraintStart_toStartOf="@+id/drawing"
        app:layout_constraintTop_toTopOf="@+id/drawing" />

    <ProgressBar
        android:id="@+id/indexBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="@+id/drawing"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/drawing" />

</androidx.constraintlayout.widget.ConstraintLayout>